🔧 FIX: Correcciones en index.html - Ajustes de interfaz - Mejoras de usabilidad - Optimización de elementos UI

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <i class="fas fa-exchange-alt"></i>
       </div>
       <div>
-        <h1>VenezuelaCambio Pro</h1>
+        <h1>ARICHUNACambio Pro</h1>
         <div class="sub">by LUAN System™ · Enhanced Edition</div>
       </div>
     </div>
