--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#667eea">
   <meta name="description" content="Conversor de monedas venezolanas con tasas en tiempo real - VenezuelaCambio Pro">
   
-  <title>VenezuelaCambio Pro - LUAN System™</title>
+  <title>ARICHUNACambio Pro - LUAN System™</title>
   
   <!-- PWA -->
   <link rel="manifest" href="manifest.json">
